--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,14 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                
+              },
+              
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": [
